fixing map illustrations overlapping top image

--- a/css/map.css
+++ b/css/map.css
@@ -101,7 +101,8 @@ body.section_4 .acknowledgement:after{
 .icon{
 	/*position: fixed;*/
 	opacity: 0;
-	width: 100%;
+	max-width: 100%;
+	max-height: 30vh;
 	margin-bottom: 1rem;
 	bottom: 11rem;
 	pointer-events: none;
